--- a/paper/main.tex
+++ b/paper/main.tex
@@ -93,73 +93,73 @@ Cis-regulatory elements (CREs)---enhancers, promoters, and silencers---orchestra
 
 \begin{figure*}[t]
 \centering
-\begin{tikzpicture}[scale=0.85, transform shape]
+\begin{tikzpicture}[scale=1.0, transform shape]
 
 % === LEFT PANEL: Arabidopsis Promoter ===
-\node[font=\small\bfseries, green!50!black] at (0, 4.5) {Arabidopsis Promoter};
+\node[font=\normalsize\bfseries, green!50!black] at (0, 4.5) {Arabidopsis Promoter};
 % Real sequence from dataset (high-activity with TATA)
-\node[font=\tiny\ttfamily] at (0, 4.0) {5'-AGCCCTTAATTATCCA\textcolor{red!70!black}{\underline{TATA}}AGCC...-3'};
-\node[font=\tiny, red!70!black] at (0.3, 3.6) {$\uparrow$ TATA box};
+\node[font=\scriptsize\ttfamily] at (0, 3.9) {5'-AGCCCTTAATTATCCA\textcolor{red!70!black}{\underline{TATA}}AGCC...-3'};
+\node[font=\scriptsize, red!70!black] at (0.3, 3.4) {$\uparrow$ TATA box};
 
 % MGW profile - REAL: mean=4.35Å, narrow fraction=0.64
-\node[font=\tiny, anchor=east] at (-2.3, 3.0) {MGW (\AA)};
-\draw[thick, blue!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {3.0 + 0.25 - 0.35*exp(-(\x-0.2)^2/0.3)});
-\draw[dashed, gray, thin] (-2.2, 2.75) -- (2.2, 2.75);
-\node[font=\tiny, gray] at (2.5, 2.75) {4.35};
+\node[font=\scriptsize, anchor=east] at (-2.3, 2.8) {MGW (\AA)};
+\draw[very thick, blue!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {2.8 + 0.25 - 0.35*exp(-(\x-0.2)^2/0.3)});
+\draw[dashed, gray] (-2.2, 2.55) -- (2.2, 2.55);
+\node[font=\scriptsize, gray] at (2.6, 2.55) {4.35};
 
 % ProT profile
-\node[font=\tiny, anchor=east] at (-2.3, 2.2) {ProT ($^\circ$)};
-\draw[thick, purple!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {2.2 + 0.15*sin(\x*150) + 0.1*cos(\x*80)});
+\node[font=\scriptsize, anchor=east] at (-2.3, 2.0) {ProT ($^\circ$)};
+\draw[very thick, purple!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {2.0 + 0.15*sin(\x*150) + 0.1*cos(\x*80)});
 
 % Electrostatic profile
-\node[font=\tiny, anchor=east] at (-2.3, 1.4) {$\psi$ (kT/e)};
-\draw[thick, red!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {1.4 - 0.2 + 0.25*exp(-(\x-0.2)^2/0.4)});
+\node[font=\scriptsize, anchor=east] at (-2.3, 1.2) {$\psi$ (kT/e)};
+\draw[very thick, red!70] plot[smooth, samples=30, domain=-2.2:2.2] (\x, {1.2 - 0.2 + 0.25*exp(-(\x-0.2)^2/0.4)});
 
-\draw[rounded corners, gray!50] (-2.5, 1.0) rectangle (2.8, 4.3);
+\draw[rounded corners, gray!50, thick] (-2.5, 0.8) rectangle (2.8, 4.2);
 
 % === CENTER: Conservation Arrow ===
-\draw[-{Stealth[length=3mm]}, very thick, green!60!black] (3.2, 2.5) -- (4.8, 2.5);
-\node[font=\tiny, align=center, green!50!black] at (4, 3.0) {Conserved\\biophysics};
-\node[font=\tiny, align=center] at (4, 2.0) {36\% seq.\\identity};
+\draw[-{Stealth[length=4mm]}, ultra thick, green!60!black] (3.2, 2.3) -- (4.8, 2.3);
+\node[font=\scriptsize, align=center, green!50!black] at (4, 2.9) {Conserved\\biophysics};
+\node[font=\scriptsize, align=center] at (4, 1.7) {36\% seq.\\identity};
 
 % === RIGHT PANEL: Maize Promoter ===
-\node[font=\small\bfseries, green!50!black] at (7.5, 4.5) {Maize Promoter};
+\node[font=\normalsize\bfseries, green!50!black] at (7.5, 4.5) {Maize Promoter};
 % Real sequence from dataset (high-activity)
-\node[font=\tiny\ttfamily] at (7.5, 4.0) {5'-GCAAAAAAAACTCAAACCAACCCGAAAC...-3'};
-\node[font=\tiny, gray] at (7.8, 3.6) {(high activity)};
+\node[font=\scriptsize\ttfamily] at (7.5, 3.9) {5'-GCAAAAAAAACTCAAACCAACCCGAAAC...-3'};
+\node[font=\scriptsize, gray] at (7.8, 3.4) {(high activity)};
 
 % MGW profile - REAL: mean=4.45Å, narrow fraction=0.54
-\node[font=\tiny, anchor=east] at (5.2, 3.0) {MGW (\AA)};
-\draw[thick, blue!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {3.0 + 0.25 - 0.33*exp(-(\x-7.7)^2/0.35)});
-\draw[dashed, gray, thin] (5.3, 2.75) -- (9.7, 2.75);
-\node[font=\tiny, gray] at (10, 2.75) {4.45};
+\node[font=\scriptsize, anchor=east] at (5.2, 2.8) {MGW (\AA)};
+\draw[very thick, blue!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {2.8 + 0.25 - 0.33*exp(-(\x-7.7)^2/0.35)});
+\draw[dashed, gray] (5.3, 2.55) -- (9.7, 2.55);
+\node[font=\scriptsize, gray] at (10.1, 2.55) {4.45};
 
 % ProT profile (similar)
-\node[font=\tiny, anchor=east] at (5.2, 2.2) {ProT ($^\circ$)};
-\draw[thick, purple!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {2.2 + 0.15*sin((\x-5.3)*150) + 0.1*cos((\x-5.3)*80)});
+\node[font=\scriptsize, anchor=east] at (5.2, 2.0) {ProT ($^\circ$)};
+\draw[very thick, purple!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {2.0 + 0.15*sin((\x-5.3)*150) + 0.1*cos((\x-5.3)*80)});
 
 % Electrostatic profile (similar)
-\node[font=\tiny, anchor=east] at (5.2, 1.4) {$\psi$ (kT/e)};
-\draw[thick, red!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {1.4 - 0.2 + 0.23*exp(-(\x-7.7)^2/0.45)});
+\node[font=\scriptsize, anchor=east] at (5.2, 1.2) {$\psi$ (kT/e)};
+\draw[very thick, red!70] plot[smooth, samples=30, domain=5.3:9.7] (\x, {1.2 - 0.2 + 0.23*exp(-(\x-7.7)^2/0.45)});
 
-\draw[rounded corners, gray!50] (5.0, 1.0) rectangle (10.3, 4.3);
+\draw[rounded corners, gray!50, thick] (5.0, 0.8) rectangle (10.3, 4.2);
 
 % === BOTTOM: Activity Comparison (REAL VALUES from dataset) ===
-\draw[fill=green!30] (-1.5, 0.0) rectangle (0.8, 0.5);
-\node[font=\tiny] at (-0.35, 0.25) {Act: 4.16};
-\node[font=\tiny, green!50!black] at (-0.35, -0.25) {Arabidopsis};
+\draw[fill=green!30, thick] (-1.5, -0.2) rectangle (0.8, 0.4);
+\node[font=\scriptsize\bfseries] at (-0.35, 0.1) {Act: 4.16};
+\node[font=\scriptsize, green!50!black] at (-0.35, -0.5) {Arabidopsis};
 
-\draw[fill=green!30] (6.7, 0.0) rectangle (8.8, 0.5);
-\node[font=\tiny] at (7.75, 0.25) {Act: 2.59};
-\node[font=\tiny, green!50!black] at (7.75, -0.25) {Maize};
+\draw[fill=green!30, thick] (6.7, -0.2) rectangle (8.8, 0.4);
+\node[font=\scriptsize\bfseries] at (7.75, 0.1) {Act: 2.59};
+\node[font=\scriptsize, green!50!black] at (7.75, -0.5) {Maize};
 
 % S2A prediction arrow
-\draw[-{Stealth}, thick, blue!60] (1.0, 0.25) -- (6.5, 0.25);
-\node[font=\tiny, blue!60, align=center] at (3.75, 0.6) {S2A: $\rho$=0.70};
+\draw[-{Stealth}, very thick, blue!60] (1.0, 0.1) -- (6.5, 0.1);
+\node[font=\small, blue!60, align=center] at (3.75, 0.5) {\textbf{S2A: $\rho$=0.70}};
 
 % === MODULE STRIP (bottom) ===
-\draw[rounded corners, fill=gray!10] (-2.5, -1.1) rectangle (10.3, -0.5);
-\node[font=\tiny] at (4, -0.8) {\textbf{Modules:} CADENCE $r$=0.81 | PhysInformer 521 feat | TileFormer 10,000$\times$ | S2A $\rho$=0.70 | PLACE 90\% coverage};
+\draw[rounded corners, fill=gray!10, thick] (-2.5, -1.3) rectangle (10.3, -0.7);
+\node[font=\scriptsize] at (4, -1.0) {\textbf{Modules:} CADENCE $r$=0.81 | PhysInformer 521 feat | TileFormer 10,000$\times$ | S2A $\rho$=0.70 | PLACE 90\% cov.};
 
 \end{tikzpicture}
 \caption{\textbf{Biophysical features enable cross-species regulatory prediction.} Two plant promoters with 36\% sequence identity share conserved biophysical profiles. (Left) Arabidopsis promoter with TATA box (activity=4.16, MGW mean=4.35\AA{}). (Right) High-activity Maize promoter (activity=2.59, MGW mean=4.45\AA{}). Both species show mean MGW $\approx$4.3--4.5\AA{} (data from 12,115 Arabidopsis and 22,143 Maize sequences). (Bottom) \stwoa{} exploits this conservation for zero-shot transfer ($\rho$=0.70, Arab.+Sorg.$\rightarrow$Maize, $n$=2,461 test sequences).}
@@ -357,29 +357,30 @@ A key capability of \fusemap{} is predicting regulatory activity in species with
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.75]
+\begin{tikzpicture}[scale=0.9]
 % === S2A Prediction Scatter ===
 \begin{axis}[
     width=0.95\columnwidth,
-    height=5cm,
-    xlabel={S2A Predicted (Arab.+Sorg.$\to$Maize)},
+    height=6cm,
+    xlabel={S2A Predicted Activity (Arab.+Sorg.$\to$Maize)},
     ylabel={True Maize Activity},
-    xlabel style={font=\small},
-    ylabel style={font=\small},
+    xlabel style={font=\normalsize},
+    ylabel style={font=\normalsize},
+    tick label style={font=\small},
     xmin=0, xmax=3,
     ymin=0, ymax=3,
     grid=major,
-    grid style={gray!20},
+    grid style={gray!30},
 ]
 % Scatter points - REAL data sampled from maize test set (r=0.70)
-\addplot[only marks, mark=*, mark size=1pt, blue!60, opacity=0.5] coordinates {
+\addplot[only marks, mark=*, mark size=1.5pt, blue!70, opacity=0.6] coordinates {
     (0.68,0.00) (0.81,0.59) (1.25,0.71) (1.70,0.80) (0.96,0.87) (1.01,0.94) (1.87,1.00) (1.55,1.07) (1.03,1.13) (1.54,1.19) (1.12,1.25) (1.17,1.32) (1.53,1.38) (0.59,1.43) (0.72,1.49) (1.29,1.55) (1.12,1.61) (1.77,1.67) (1.25,1.73) (1.07,1.78) (2.41,1.85) (1.69,1.91) (1.87,1.97) (1.24,2.03) (1.68,2.11) (2.04,2.18) (1.52,2.27) (2.28,2.36) (1.93,2.50) (2.42,3.00)
 };
 % Perfect correlation line
-\addplot[red, thick, dashed, domain=0:3] {x};
+\addplot[red, very thick, dashed, domain=0:3] {x};
 % Annotation
-\node[font=\small] at (axis cs:0.7,2.5) {$\rho = 0.70$};
-\node[font=\small] at (axis cs:0.7,2.2) {$n = 2{,}461$};
+\node[font=\normalsize\bfseries] at (axis cs:0.8,2.6) {$\rho = 0.70$};
+\node[font=\small] at (axis cs:0.8,2.25) {$n = 2{,}461$};
 \end{axis}
 \end{tikzpicture}
 \caption{\textbf{S2A zero-shot cross-species transfer.} Predicted vs.\ actual Maize promoter activity using \stwoa{} trained only on Arabidopsis and Sorghum data (n=2,461 test sequences). Strong correlation ($\rho$=0.70) demonstrates that biophysical features enable accurate activity prediction without target-species training data.}
@@ -672,50 +673,50 @@ This hierarchy suggests DNA shape is the most universal biophysical feature, fol
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.85]
+\begin{tikzpicture}[scale=1.0]
 % Heatmap for feature transfer - REAL DATA from generate_figure8.py
-\def\cellsize{0.8}
+\def\cellsize{1.1}
 % Column labels (5 feature categories)
-\node[font=\tiny, rotate=45, anchor=west] at (0.5*\cellsize, 3.3*\cellsize) {Bending};
-\node[font=\tiny, rotate=45, anchor=west] at (1.5*\cellsize, 3.3*\cellsize) {Adv.Struct};
-\node[font=\tiny, rotate=45, anchor=west] at (2.5*\cellsize, 3.3*\cellsize) {Entropy};
-\node[font=\tiny, rotate=45, anchor=west] at (3.5*\cellsize, 3.3*\cellsize) {Stiffness};
-\node[font=\tiny, rotate=45, anchor=west] at (4.5*\cellsize, 3.3*\cellsize) {PWM/TF};
+\node[font=\scriptsize, rotate=45, anchor=west] at (0.5*\cellsize, 3.4*\cellsize) {Bending};
+\node[font=\scriptsize, rotate=45, anchor=west] at (1.5*\cellsize, 3.4*\cellsize) {Adv.Struct};
+\node[font=\scriptsize, rotate=45, anchor=west] at (2.5*\cellsize, 3.4*\cellsize) {Entropy};
+\node[font=\scriptsize, rotate=45, anchor=west] at (3.5*\cellsize, 3.4*\cellsize) {Stiffness};
+\node[font=\scriptsize, rotate=45, anchor=west] at (4.5*\cellsize, 3.4*\cellsize) {PWM/TF};
 
 % Row labels (transfer scenarios)
-\node[font=\tiny, anchor=east] at (-0.1, 2.5*\cellsize) {Within Human};
-\node[font=\tiny, anchor=east] at (-0.1, 1.5*\cellsize) {Cross-Species};
-\node[font=\tiny, anchor=east] at (-0.1, 0.5*\cellsize) {Cross-Kingdom};
+\node[font=\scriptsize, anchor=east] at (-0.1, 2.5*\cellsize) {Within Human};
+\node[font=\scriptsize, anchor=east] at (-0.1, 1.5*\cellsize) {Cross-Species};
+\node[font=\scriptsize, anchor=east] at (-0.1, 0.5*\cellsize) {Cross-Kingdom};
 
 % Row 1: Within Human (r=0.85 overall) - REAL VALUES
-\fill[blue!98] (0,2*\cellsize) rectangle (\cellsize,3*\cellsize); \node[font=\tiny,white] at (0.5*\cellsize,2.5*\cellsize) {.98};
-\fill[blue!94] (\cellsize,2*\cellsize) rectangle (2*\cellsize,3*\cellsize); \node[font=\tiny,white] at (1.5*\cellsize,2.5*\cellsize) {.94};
-\fill[blue!84] (2*\cellsize,2*\cellsize) rectangle (3*\cellsize,3*\cellsize); \node[font=\tiny,white] at (2.5*\cellsize,2.5*\cellsize) {.84};
-\fill[blue!43] (3*\cellsize,2*\cellsize) rectangle (4*\cellsize,3*\cellsize); \node[font=\tiny] at (3.5*\cellsize,2.5*\cellsize) {.43};
-\fill[blue!94] (4*\cellsize,2*\cellsize) rectangle (5*\cellsize,3*\cellsize); \node[font=\tiny,white] at (4.5*\cellsize,2.5*\cellsize) {.94};
+\fill[blue!98] (0,2*\cellsize) rectangle (\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries,white] at (0.5*\cellsize,2.5*\cellsize) {.98};
+\fill[blue!94] (\cellsize,2*\cellsize) rectangle (2*\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries,white] at (1.5*\cellsize,2.5*\cellsize) {.94};
+\fill[blue!84] (2*\cellsize,2*\cellsize) rectangle (3*\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries,white] at (2.5*\cellsize,2.5*\cellsize) {.84};
+\fill[blue!43] (3*\cellsize,2*\cellsize) rectangle (4*\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries] at (3.5*\cellsize,2.5*\cellsize) {.43};
+\fill[blue!94] (4*\cellsize,2*\cellsize) rectangle (5*\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries,white] at (4.5*\cellsize,2.5*\cellsize) {.94};
 
 % Row 2: Cross-Species (H→Fly, r=0.73 overall) - REAL VALUES
-\fill[blue!94] (0,1*\cellsize) rectangle (\cellsize,2*\cellsize); \node[font=\tiny,white] at (0.5*\cellsize,1.5*\cellsize) {.94};
-\fill[blue!91] (\cellsize,1*\cellsize) rectangle (2*\cellsize,2*\cellsize); \node[font=\tiny,white] at (1.5*\cellsize,1.5*\cellsize) {.91};
-\fill[blue!78] (2*\cellsize,1*\cellsize) rectangle (3*\cellsize,2*\cellsize); \node[font=\tiny,white] at (2.5*\cellsize,1.5*\cellsize) {.78};
-\fill[blue!46] (3*\cellsize,1*\cellsize) rectangle (4*\cellsize,2*\cellsize); \node[font=\tiny] at (3.5*\cellsize,1.5*\cellsize) {.46};
-\fill[blue!11] (4*\cellsize,1*\cellsize) rectangle (5*\cellsize,2*\cellsize); \node[font=\tiny] at (4.5*\cellsize,1.5*\cellsize) {.11};
+\fill[blue!94] (0,1*\cellsize) rectangle (\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries,white] at (0.5*\cellsize,1.5*\cellsize) {.94};
+\fill[blue!91] (\cellsize,1*\cellsize) rectangle (2*\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries,white] at (1.5*\cellsize,1.5*\cellsize) {.91};
+\fill[blue!78] (2*\cellsize,1*\cellsize) rectangle (3*\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries,white] at (2.5*\cellsize,1.5*\cellsize) {.78};
+\fill[blue!46] (3*\cellsize,1*\cellsize) rectangle (4*\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries] at (3.5*\cellsize,1.5*\cellsize) {.46};
+\fill[blue!11] (4*\cellsize,1*\cellsize) rectangle (5*\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries] at (4.5*\cellsize,1.5*\cellsize) {.11};
 
 % Row 3: Cross-Kingdom (H→Plant, r=0.67 overall) - REAL VALUES
-\fill[blue!92] (0,0) rectangle (\cellsize,\cellsize); \node[font=\tiny,white] at (0.5*\cellsize,0.5*\cellsize) {.92};
-\fill[blue!91] (\cellsize,0) rectangle (2*\cellsize,\cellsize); \node[font=\tiny,white] at (1.5*\cellsize,0.5*\cellsize) {.91};
-\fill[blue!68] (2*\cellsize,0) rectangle (3*\cellsize,\cellsize); \node[font=\tiny,white] at (2.5*\cellsize,0.5*\cellsize) {.68};
-\fill[blue!45] (3*\cellsize,0) rectangle (4*\cellsize,\cellsize); \node[font=\tiny] at (3.5*\cellsize,0.5*\cellsize) {.45};
-\fill[blue!3] (4*\cellsize,0) rectangle (5*\cellsize,\cellsize); \node[font=\tiny] at (4.5*\cellsize,0.5*\cellsize) {.03};
+\fill[blue!92] (0,0) rectangle (\cellsize,\cellsize); \node[font=\scriptsize\bfseries,white] at (0.5*\cellsize,0.5*\cellsize) {.92};
+\fill[blue!91] (\cellsize,0) rectangle (2*\cellsize,\cellsize); \node[font=\scriptsize\bfseries,white] at (1.5*\cellsize,0.5*\cellsize) {.91};
+\fill[blue!68] (2*\cellsize,0) rectangle (3*\cellsize,\cellsize); \node[font=\scriptsize\bfseries,white] at (2.5*\cellsize,0.5*\cellsize) {.68};
+\fill[blue!45] (3*\cellsize,0) rectangle (4*\cellsize,\cellsize); \node[font=\scriptsize\bfseries] at (3.5*\cellsize,0.5*\cellsize) {.45};
+\fill[blue!3] (4*\cellsize,0) rectangle (5*\cellsize,\cellsize); \node[font=\scriptsize\bfseries,red!70!black] at (4.5*\cellsize,0.5*\cellsize) {.03};
 
 % Grid lines
-\draw[gray!50] (0,0) grid[step=\cellsize] (5*\cellsize,3*\cellsize);
+\draw[gray!60, thick] (0,0) grid[step=\cellsize] (5*\cellsize,3*\cellsize);
 
 % Colorbar
-\node[font=\tiny] at (6.0*\cellsize, 2.5*\cellsize) {1.0};
-\shade[top color=blue!100, bottom color=blue!10] (5.5*\cellsize,0.5*\cellsize) rectangle (5.8*\cellsize,2.5*\cellsize);
-\node[font=\tiny] at (6.0*\cellsize, 0.5*\cellsize) {0.0};
-\node[font=\tiny, rotate=90] at (6.3*\cellsize, 1.5*\cellsize) {Transfer $r$};
+\node[font=\scriptsize] at (6.2*\cellsize, 2.5*\cellsize) {1.0};
+\shade[top color=blue!100, bottom color=blue!10] (5.6*\cellsize,0.5*\cellsize) rectangle (5.95*\cellsize,2.5*\cellsize);
+\node[font=\scriptsize] at (6.2*\cellsize, 0.5*\cellsize) {0.0};
+\node[font=\scriptsize, rotate=90] at (6.5*\cellsize, 1.5*\cellsize) {Transfer $r$};
 
 \end{tikzpicture}
 \caption{\textbf{Biophysical feature transfer across evolutionary distance.} Heatmap showing Pearson $r$ by feature category. Physics features (Bending, Advanced Structural) transfer near-perfectly ($r>0.91$) even cross-kingdom, while PWM/TF-binding features collapse dramatically (0.94$\to$0.03, --97\%). This hierarchy demonstrates that DNA physical properties are conserved while regulatory grammar is species-specific.}
@@ -754,18 +755,19 @@ Overall & \textbf{0.961} & \textbf{0.982} & 0.009 \\
 \begin{tikzpicture}
 \begin{axis}[
     width=\columnwidth,
-    height=4.5cm,
+    height=5.5cm,
     xlabel={\tileformer{} Predicted $\psi$ (kT/e)},
     ylabel={APBS Ground Truth $\psi$ (kT/e)},
-    xlabel style={font=\small},
-    ylabel style={font=\small},
+    xlabel style={font=\normalsize},
+    ylabel style={font=\normalsize},
+    tick label style={font=\small},
     xmin=-0.24, xmax=-0.13,
     ymin=-0.24, ymax=-0.13,
     grid=major,
-    grid style={gray!20},
+    grid style={gray!30},
 ]
 % Real scatter plot from test set (200 samples from 5,199 test sequences)
-\addplot[only marks, mark=*, mark size=0.5pt, blue!50!black, opacity=0.5] coordinates {
+\addplot[only marks, mark=*, mark size=1.2pt, blue!60!black, opacity=0.6] coordinates {
     (-0.1623,-0.1679) (-0.2050,-0.2006) (-0.1925,-0.1920) (-0.1688,-0.1701) (-0.1752,-0.1775)
     (-0.1820,-0.1782) (-0.1670,-0.1623) (-0.1784,-0.1818) (-0.1408,-0.1386) (-0.1801,-0.1778)
     (-0.1810,-0.1858) (-0.1911,-0.1913) (-0.1711,-0.1713) (-0.1533,-0.1527) (-0.1958,-0.1920)
@@ -788,10 +790,10 @@ Overall & \textbf{0.961} & \textbf{0.982} & 0.009 \\
     (-0.2013,-0.1984) (-0.1684,-0.1679) (-0.1634,-0.1633) (-0.1747,-0.1760) (-0.1855,-0.1875)
 };
 % Perfect correlation line
-\addplot[red, thick, domain=-0.24:-0.13] {x};
+\addplot[red, very thick, domain=-0.24:-0.13] {x};
 % R^2 annotation
-\node[font=\small] at (axis cs:-0.145,-0.22) {$R^2 = 0.961$};
-\node[font=\small] at (axis cs:-0.145,-0.23) {$n = 5,199$};
+\node[font=\normalsize\bfseries] at (axis cs:-0.145,-0.215) {$R^2 = 0.961$};
+\node[font=\small] at (axis cs:-0.145,-0.228) {$n = 5{,}199$};
 \end{axis}
 \end{tikzpicture}
 \caption{\textbf{\tileformer{} predicts electrostatic potential with $R^2=0.96$.} Each point compares \tileformer{}'s predicted minor groove potential ($\psi_{\text{mean}}$, x-axis) against the APBS physics simulation ground truth (y-axis) for held-out test sequences. The tight clustering around $y=x$ (red line) demonstrates that our transformer surrogate accurately captures sequence-dependent electrostatics, enabling 10,000$\times$ speedup over APBS while maintaining high fidelity. Data: 200 sequences randomly sampled from 5,199-sequence test set.}
@@ -871,34 +873,34 @@ Fly & Plants & -0.32 \\
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.75]
-\def\cellsize{0.9}
+\begin{tikzpicture}[scale=0.95]
+\def\cellsize{1.1}
 % Labels (target species)
-\node[font=\tiny, rotate=45, anchor=west] at (0.5*\cellsize, 4.3*\cellsize) {WTC11};
-\node[font=\tiny, rotate=45, anchor=west] at (1.5*\cellsize, 4.3*\cellsize) {S2};
-\node[font=\tiny, rotate=45, anchor=west] at (2.5*\cellsize, 4.3*\cellsize) {Arab.};
-\node[font=\tiny, rotate=45, anchor=west] at (3.5*\cellsize, 4.3*\cellsize) {Maize};
+\node[font=\scriptsize, rotate=45, anchor=west] at (0.5*\cellsize, 4.3*\cellsize) {WTC11};
+\node[font=\scriptsize, rotate=45, anchor=west] at (1.5*\cellsize, 4.3*\cellsize) {S2};
+\node[font=\scriptsize, rotate=45, anchor=west] at (2.5*\cellsize, 4.3*\cellsize) {Arab.};
+\node[font=\scriptsize, rotate=45, anchor=west] at (3.5*\cellsize, 4.3*\cellsize) {Maize};
 
 % Labels (source species)
-\node[font=\tiny, anchor=east] at (-0.1, 3.5*\cellsize) {K562+HepG2};
-\node[font=\tiny, anchor=east] at (-0.1, 2.5*\cellsize) {Plants};
-\node[font=\tiny, anchor=east] at (-0.1, 1.5*\cellsize) {Animals};
-\node[font=\tiny, anchor=east] at (-0.1, 0.5*\cellsize) {Arab.+Sorg.};
+\node[font=\scriptsize, anchor=east] at (-0.1, 3.5*\cellsize) {K562+HepG2};
+\node[font=\scriptsize, anchor=east] at (-0.1, 2.5*\cellsize) {Plants};
+\node[font=\scriptsize, anchor=east] at (-0.1, 1.5*\cellsize) {Animals};
+\node[font=\scriptsize, anchor=east] at (-0.1, 0.5*\cellsize) {Arab.+Sorg.};
 
 % Real values from FUSEMAP_results/s2a_transfer/
 % Row 1: K562+HepG2 sources
-\fill[teal!45] (0,3*\cellsize) rectangle (\cellsize,4*\cellsize); \node[font=\tiny] at (0.5*\cellsize,3.5*\cellsize) {.26};  % → WTC11
-\fill[violet!15] (\cellsize,3*\cellsize) rectangle (2*\cellsize,4*\cellsize); \node[font=\tiny] at (1.5*\cellsize,3.5*\cellsize) {-.09};  % → S2
+\fill[teal!45] (0,3*\cellsize) rectangle (\cellsize,4*\cellsize); \node[font=\scriptsize\bfseries] at (0.5*\cellsize,3.5*\cellsize) {.26};  % → WTC11
+\fill[violet!15] (\cellsize,3*\cellsize) rectangle (2*\cellsize,4*\cellsize); \node[font=\scriptsize\bfseries] at (1.5*\cellsize,3.5*\cellsize) {-.09};  % → S2
 
 % Row 2: Plants → targets
-\fill[violet!25] (0,2*\cellsize) rectangle (\cellsize,3*\cellsize); \node[font=\tiny] at (0.5*\cellsize,2.5*\cellsize) {--};
-\fill[teal!30] (\cellsize,2*\cellsize) rectangle (2*\cellsize,3*\cellsize); \node[font=\tiny] at (1.5*\cellsize,2.5*\cellsize) {.13};  % → S2
+\fill[violet!25] (0,2*\cellsize) rectangle (\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries] at (0.5*\cellsize,2.5*\cellsize) {--};
+\fill[teal!30] (\cellsize,2*\cellsize) rectangle (2*\cellsize,3*\cellsize); \node[font=\scriptsize\bfseries] at (1.5*\cellsize,2.5*\cellsize) {.13};  % → S2
 
 % Row 3: Animals → plants
-\fill[violet!10] (2*\cellsize,1*\cellsize) rectangle (3*\cellsize,2*\cellsize); \node[font=\tiny] at (2.5*\cellsize,1.5*\cellsize) {-.32};  % → Arab
+\fill[violet!10] (2*\cellsize,1*\cellsize) rectangle (3*\cellsize,2*\cellsize); \node[font=\scriptsize\bfseries] at (2.5*\cellsize,1.5*\cellsize) {-.32};  % → Arab
 
 % Row 4: Within-plant (Arab+Sorg → Maize): STRONG
-\fill[yellow!85!orange] (3*\cellsize,0) rectangle (4*\cellsize,\cellsize); \node[font=\tiny] at (3.5*\cellsize,0.5*\cellsize) {\textbf{.70}};
+\fill[yellow!85!orange] (3*\cellsize,0) rectangle (4*\cellsize,\cellsize); \node[font=\scriptsize\bfseries] at (3.5*\cellsize,0.5*\cellsize) {\textbf{.70}};
 
 % Grid
 \draw[gray!50] (0,0) grid[step=\cellsize] (4*\cellsize,4*\cellsize);
@@ -908,9 +910,9 @@ Fly & Plants & -0.32 \\
 \draw[thick, black] (-0.1,2*\cellsize) -- (4.1*\cellsize,2*\cellsize);
 
 % Clade labels
-\node[font=\tiny] at (0.5*\cellsize, -0.4*\cellsize) {Human};
-\node[font=\tiny] at (1.5*\cellsize, -0.4*\cellsize) {Fly};
-\node[font=\tiny] at (3*\cellsize, -0.4*\cellsize) {Plant};
+\node[font=\scriptsize] at (0.5*\cellsize, -0.4*\cellsize) {Human};
+\node[font=\scriptsize] at (1.5*\cellsize, -0.4*\cellsize) {Fly};
+\node[font=\scriptsize] at (3*\cellsize, -0.4*\cellsize) {Plant};
 
 \end{tikzpicture}
 \caption{\textbf{Physics features enable within-kingdom but not cross-kingdom transfer.} Heatmap of zero-shot Spearman $\rho$ for \stwoa{} transfer between species. \textit{Within-plant transfer succeeds}: training on Arabidopsis+Sorghum physics features predicts held-out Maize activity with $\rho=0.70$ (n=2,461). \textit{Within-human is moderate}: K562+HepG2$\rightarrow$WTC11 achieves $\rho=0.26$. \textit{Cross-kingdom fails}: animal$\rightarrow$plant ($\rho=-0.32$) and plant$\rightarrow$animal ($\rho=0.13$) transfers show that while DNA physical properties are conserved, regulatory grammar is kingdom-specific.}
@@ -947,19 +949,19 @@ Yeast & 67,055 & 0.719 & 0.848 \\
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.85]
+\begin{tikzpicture}[scale=1.0]
 \begin{axis}[
     ybar,
     width=\columnwidth,
-    height=4.5cm,
+    height=5.5cm,
     ylabel={Residual Std / Noise Var},
-    ylabel style={font=\small},
+    ylabel style={font=\normalsize},
     symbolic x coords={K562, HepG2, DeepSTARR, Maize, Yeast},
     xtick=data,
-    x tick label style={font=\scriptsize},
+    x tick label style={font=\small},
     ymin=0, ymax=1.2,
-    bar width=6pt,
-    legend style={at={(0.98,0.98)}, anchor=north east, font=\tiny},
+    bar width=8pt,
+    legend style={at={(0.98,0.98)}, anchor=north east, font=\scriptsize},
     enlarge x limits=0.12,
 ]
 % Real noise variance from calibration
@@ -995,15 +997,15 @@ These results confirm \physicsvae{} learns transferable sequence representations
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.85]
+\begin{tikzpicture}[scale=1.0]
 % Real UMAP from K562 regime discovery: 158,377 sequences embedded in 521-D physics feature space
 \begin{axis}[
     width=\columnwidth,
-    height=5cm,
+    height=6cm,
     xlabel={UMAP 1},
     ylabel={UMAP 2},
-    xlabel style={font=\small},
-    ylabel style={font=\small},
+    xlabel style={font=\normalsize},
+    ylabel style={font=\normalsize},
     xmin=-0.5, xmax=10.5,
     ymin=-0.5, ymax=10.5,
     xtick=\empty,
@@ -1012,7 +1014,7 @@ These results confirm \physicsvae{} learns transferable sequence representations
 ]
 % Regime 0 (blue): Higher entropy, lower stacking energy - 79,363 sequences (50.1%)
 % 250 real coordinates from embedding_K562.npz, normalized to [0,10]
-\addplot[only marks, mark=*, mark size=0.5pt, blue!70, opacity=0.4] coordinates {
+\addplot[only marks, mark=*, mark size=1.5pt, blue!70, opacity=0.6] coordinates {
     (6.55,8.82) (5.43,6.65) (7.58,7.04) (7.52,7.03) (6.82,9.30) (7.26,6.63) (6.44,9.52) (5.97,8.38)
     (5.45,6.72) (7.35,6.56) (5.94,9.58) (6.57,6.76) (6.66,7.94) (7.28,7.26) (5.92,6.19) (6.76,6.70)
     (7.73,5.34) (9.86,8.56) (7.40,7.02) (6.56,8.43) (7.08,6.65) (6.67,9.48) (7.63,7.28) (6.47,8.34)
@@ -1046,7 +1048,7 @@ These results confirm \physicsvae{} learns transferable sequence representations
 };
 % Regime 1 (orange): Higher stacking energy ($\Delta S$, $\Delta H$) - 79,002 sequences (49.9%)
 % 250 real coordinates from embedding_K562.npz, normalized to [0,10]
-\addplot[only marks, mark=*, mark size=0.5pt, orange!80!red, opacity=0.4] coordinates {
+\addplot[only marks, mark=*, mark size=1.5pt, orange!80!red, opacity=0.6] coordinates {
     (0.47,5.41) (0.56,5.00) (0.27,5.43) (1.04,6.41) (0.25,5.46) (0.66,5.61) (0.48,6.41) (1.25,5.96)
     (1.17,7.52) (0.63,4.46) (0.77,5.01) (0.72,5.16) (1.49,5.75) (0.75,5.38) (0.78,6.77) (0.90,5.90)
     (0.66,6.64) (0.76,6.28) (1.02,5.62) (0.75,7.25) (0.12,5.60) (1.11,6.40) (0.86,7.57) (1.16,4.86)
@@ -1080,8 +1082,8 @@ These results confirm \physicsvae{} learns transferable sequence representations
     (1.02,5.92) (0.71,5.12) (0.35,6.03) (0.90,5.40) (0.65,7.37) (0.26,5.71) (0.86,7.60) (0.48,6.79)
 };
 % Labels with biological interpretation
-\node[font=\tiny, blue!70, align=left] at (axis cs:8.5,3.0) {Regime 0 (50.1\%)\\high entropy\\low stacking};
-\node[font=\tiny, orange!80!red, align=left] at (axis cs:2.8,8.5) {Regime 1 (49.9\%)\\high $\Delta S$/$\Delta H$\\high stacking};
+\node[font=\small, blue!70, align=left] at (axis cs:8.5,3.0) {Regime 0 (50.1\%)\\high entropy\\low stacking};
+\node[font=\small, orange!80!red, align=left] at (axis cs:2.8,8.5) {Regime 1 (49.9\%)\\high $\Delta S$/$\Delta H$\\high stacking};
 \end{axis}
 \end{tikzpicture}
 \caption{\textbf{UMAP reveals distinct biophysical regimes with equivalent function.} We embedded 158,377 K562 regulatory sequences into a 521-dimensional space of biophysical features (thermodynamics, stacking energy, bending, entropy) and applied UMAP for visualization. HDBSCAN clustering identifies two regimes: Regime~0 (blue, 79,363 sequences) has higher sequence entropy and lower base-stacking energy; Regime~1 (orange, 79,002 sequences) has higher thermodynamic stability ($\Delta S$, $\Delta H$) and stacking. \textit{Key finding}: Both regimes have nearly identical activity distributions (mean$=-0.15\pm0.53$), demonstrating that sequences can achieve equivalent regulatory function through distinct biophysical strategies---a form of ``biophysical degeneracy'' in gene regulation.}
@@ -1121,19 +1123,19 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 \begin{axis}[
     ybar,
     width=\columnwidth,
-    height=5cm,
+    height=5.5cm,
     ylabel={Pearson $r$},
     symbolic x coords={K562, DeepSTARR},
     xtick=data,
-    x tick label style={font=\scriptsize},
-    ylabel style={font=\small},
+    x tick label style={font=\normalsize},
+    ylabel style={font=\normalsize},
     ymin=0.6, ymax=1.0,
-    bar width=12pt,
-    legend style={at={(0.98,0.98)}, anchor=north east, font=\scriptsize},
+    bar width=15pt,
+    legend style={at={(0.98,0.98)}, anchor=north east, font=\small},
     legend cell align=left,
     enlarge x limits=0.3,
     nodes near coords,
-    nodes near coords style={font=\tiny},
+    nodes near coords style={font=\small},
 ]
 
 \addplot[fill=gray!60] coordinates {(K562,0.811) (DeepSTARR,0.779)};
@@ -1149,22 +1151,22 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 
 \begin{figure}[t]
 \centering
-\begin{tikzpicture}[scale=0.85]
+\begin{tikzpicture}[scale=1.0]
 \begin{axis}[
     xbar,
     width=\columnwidth,
-    height=5cm,
+    height=6cm,
     xlabel={Feature Category Contribution (\%)},
-    xlabel style={font=\small},
+    xlabel style={font=\normalsize},
     symbolic y coords={Entropy, Stiffness, Thermo, Advanced, Bending},
     ytick=data,
-    y tick label style={font=\scriptsize},
+    y tick label style={font=\small},
     xmin=0, xmax=50,
-    bar width=10pt,
+    bar width=12pt,
     enlarge y limits=0.2,
     nodes near coords,
     nodes near coords align={horizontal},
-    every node near coord/.append style={font=\tiny},
+    every node near coord/.append style={font=\small},
 ]
 \addplot[fill=teal!70] coordinates {(45.3,Bending) (26.7,Advanced) (14.1,Thermo) (7.5,Stiffness) (6.5,Entropy)};
 \end{axis}
@@ -1178,16 +1180,17 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 \begin{tikzpicture}
 \begin{axis}[
     width=\columnwidth,
-    height=5.5cm,
+    height=6cm,
     xlabel={Epoch},
     ylabel={Validation Spearman $\rho$},
-    xlabel style={font=\small},
-    ylabel style={font=\small},
+    xlabel style={font=\normalsize},
+    ylabel style={font=\normalsize},
     xmin=0, xmax=100,
     ymin=0.5, ymax=0.95,
-    legend style={at={(0.98,0.02)}, anchor=south east, font=\tiny},
+    legend style={at={(0.98,0.02)}, anchor=south east, font=\small},
     grid=major,
     grid style={gray!20},
+    tick label style={font=\small},
 ]
 
 % Real DeepSTARR training data from cadence_deepstarr_v2/training.log
